--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    Test Project!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
+    Test Project!!!!!
 </body>
 </html>
